# agg-2.6-lite

./: .gitignore  CMakeLists.txt
agg-2.4/: AggConfig.cmake.in  CMakeLists.txt  UseAgg.cmake.in  cmake_install.html
agg-2.4/agg2d/: agg2d.cpp  agg2d.h
agg-2.4/agg2d/Demo/: agg2d_demo.cpp  agg2d_demo.sln  agg2d_demo.vcxproj
agg-2.4/examples/: CMakeLists.txt  agg2d_demo.cpp  line_thickness.cpp
agg-2.4/examples/win32_api/: examples.sln
agg-2.4/examples/win32_api/aa_demo/: aa_demo.vcxproj
agg-2.4/examples/win32_api/aa_test/: aa_test.vcxproj
agg-2.4/examples/win32_api/alpha_gradient/: alpha_gradient.vcxproj
agg-2.4/examples/win32_api/alpha_mask/: alpha_mask.vcxproj
agg-2.4/examples/win32_api/alpha_mask2/: alpha_mask2.vcxproj
agg-2.4/examples/win32_api/alpha_mask3/: alpha_mask3.vcxproj
agg-2.4/examples/win32_api/bezier_div/: bezier_div.vcxproj
agg-2.4/examples/win32_api/blend_color/: blend_color.vcxproj
agg-2.4/examples/win32_api/blur/: blur.vcxproj
agg-2.4/examples/win32_api/blur VS2005/: blur.vcxproj
agg-2.4/examples/win32_api/bspline/: bspline.vcxproj
agg-2.4/examples/win32_api/circles/: circles.vcxproj
agg-2.4/examples/win32_api/component_rendering/: component_rendering.vcxproj
agg-2.4/examples/win32_api/compositing/: compositing.vcxproj
agg-2.4/examples/win32_api/compositing2/: compositing2.vcxproj
agg-2.4/examples/win32_api/conv_contour/: conv_contour.vcxproj
agg-2.4/examples/win32_api/conv_dash_marker/: conv_dash_marker.vcxproj
agg-2.4/examples/win32_api/conv_stroke/: conv_stroke.vcxproj
agg-2.4/examples/win32_api/distortions/: distortions.vcxproj
agg-2.4/examples/win32_api/flash_rasterizer/: flash_rasterizer.vcxproj
agg-2.4/examples/win32_api/flash_rasterizer2/: flash_rasterizer2.vcxproj
agg-2.4/examples/win32_api/gamma_correction/: gamma_correction.vcxproj
agg-2.4/examples/win32_api/gamma_ctrl/: gamma_ctrl.vcxproj
agg-2.4/examples/win32_api/gamma_tuner/: gamma_tuner.vcxproj
agg-2.4/examples/win32_api/gouraud/: gouraud.vcxproj
agg-2.4/examples/win32_api/gouraud_mesh/: gouraud_mesh.vcxproj
agg-2.4/examples/win32_api/gpc_test/: gpc_test.vcxproj
agg-2.4/examples/win32_api/gradient_focal/: gradient_focal.vcxproj
agg-2.4/examples/win32_api/gradients/: gradients.vcxproj
agg-2.4/examples/win32_api/graph_test/: graph_test.vcxproj
agg-2.4/examples/win32_api/idea/: idea.vcxproj
agg-2.4/examples/win32_api/image1/: image1.vcxproj
agg-2.4/examples/win32_api/image_alpha/: image_alpha.vcxproj
agg-2.4/examples/win32_api/image_filters/: image_filters.vcxproj
agg-2.4/examples/win32_api/image_filters2/: image_filters2.vcxproj
agg-2.4/examples/win32_api/image_fltr_graph/: image_fltr_graph.vcxproj
agg-2.4/examples/win32_api/image_perspective/: image_perspective.vcxproj
agg-2.4/examples/win32_api/image_resample/: image_resample.vcxproj
agg-2.4/examples/win32_api/image_scaling/: image_scaling.vcxproj
agg-2.4/examples/win32_api/image_transforms/: image_transforms.vcxproj
agg-2.4/examples/win32_api/line_patterns/: line_patterns.vcxproj
agg-2.4/examples/win32_api/line_patterns_clip/: line_patterns_clip.vcxproj
agg-2.4/examples/win32_api/line_thickness/: line_thickness.vcxproj
agg-2.4/examples/win32_api/lion/: lion.vcxproj
agg-2.4/examples/win32_api/lion_lens/: lion_lens.vcxproj
agg-2.4/examples/win32_api/lion_outline/: lion_outline.vcxproj
agg-2.4/examples/win32_api/mol_view/: mol_view.vcxproj
agg-2.4/examples/win32_api/multi_clip/: multi_clip.vcxproj
agg-2.4/examples/win32_api/pattern_fill/: pattern_fill.vcxproj
agg-2.4/examples/win32_api/pattern_perspective/: pattern_perspective.vcxproj
agg-2.4/examples/win32_api/pattern_resample/: pattern_resample.vcxproj
agg-2.4/examples/win32_api/perspective/: perspective.vcxproj
agg-2.4/examples/win32_api/polymorphic_renderer/: polymorphic_renderer.vcxproj
agg-2.4/examples/win32_api/pure_api/: pure_api.vcxproj
agg-2.4/examples/win32_api/raster_text/: raster_text.vcxproj
agg-2.4/examples/win32_api/rasterizer_compound/: rasterizer_compound.vcxproj
agg-2.4/examples/win32_api/rasterizers/: rasterizers.vcxproj
agg-2.4/examples/win32_api/rasterizers2/: rasterizers2.vcxproj
agg-2.4/examples/win32_api/rounded_rect/: rounded_rect.vcxproj
agg-2.4/examples/win32_api/scanline_boolean/: scanline_boolean.vcxproj
agg-2.4/examples/win32_api/scanline_boolean2/: scanline_boolean2.vcxproj
agg-2.4/examples/win32_api/simple_blur/: simple_blur.vcxproj
agg-2.4/examples/win32_api/svg_test/: svg_test.vcxproj
agg-2.4/examples/win32_api/tensor_product/: tensor_product.vcxproj
agg-2.4/examples/win32_api/trans_curve1/: trans_curve1.vcxproj
agg-2.4/examples/win32_api/trans_curve2/: trans_curve2.vcxproj
agg-2.4/examples/win32_api/trans_polar/: trans_polar.vcxproj
agg-2.4/examples/win32_api/truetype_test/: truetype_test.vcxproj
agg-2.4/font_freetype/: agg_font_freetype2.cpp
agg-2.4/include/: agg_pixel_formats.h  agg_pixfmt_base.h  agg_pixfmt_rgbx.h
agg-2.4/myapp/: CMakeLists.txt.in  myproject.cmake
agg-2.4/src/: CMakeLists.txt
agg-src/: CMakeLists.txt
agg-src/cmake/: agg-2.4-examples.cmake  agg-2.4.cmake  agg-2.6-examples.cmake  agg-2.6.cmake
agg-src/examples/: CMakeLists.txt
agg-src/examples/art/: compositing.ppm
agg-src/font_win32_tt/: agg_font_win32_tt.h
agg-src/include/: agg_array.h  agg_scanline_storage_aa.h
agg-src/myapp/: agg2d_demo.cpp
