cmake_minimum_required(VERSION 3.01 FATAL_ERROR)
project(agg-2.6)

set(CMAKE_CXX_STANDARD 98)
set(CMAKE_CXX_STANDARD_REQUIRED ON)


#include_directories(${antigrain_SOURCE_DIR}/examples)
#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/agg2d)
#add_library(agg2d ${CMAKE_CURRENT_SOURCE_DIR}/include/agg2d/agg2d.cpp)

#add_subdirectory(3dparty/clipper/cpp)
#include_directories(3dparty/clipper/cpp)

#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)

#add_library(vgui src/Win32Window.cpp src/Widget.cpp)

#target_link_libraries(agg2d antigrain)
#target_link_libraries(vgui agg2d antigrain)

#add_subdirectory(examples)
#add_subdirectory(3dparty/googletest)
#add_subdirectory(tests/gtest)





